# habits

./: .gitignore  .tool-versions  Makefile
api/: Cargo.toml  setup_db.sql
api/src/: main.rs
web/: .eslintrc.json  package.json
web/src/: Entry.ts  components.tsx  root.tsx  utils.ts
web/src/routes/: about.tsx  index.tsx
